# scc-backend/models/insight.map.model.js
@@ -4,11 +4,46 @@ const mongoose = require("mongoose");
 const Schema = mongoose.Schema;
 //Map Insight Model
 const mapinsightsSchema = new Schema({
-    title : { type: String },
-    type : { type: String },
-    lat : { type: Number },
-    lng : { type: Number },
-    details: []
+    jungmun: {
+        musers: { type: Number },
+        mcharge: { type: Number },
+        mco2reduction: { type: Number }
+    },
+    sinchang: {
+        mpowergenaration: { type: Number },
+        msurplus: { type: Number },
+        mco2reduction: { type: Number }
+    },
+    seogwi: {
+        musers: { type: Number },
+        mcharge: { type: Number },
+        mco2reduction: { type: Number }
+    },
+    gashiri: {
+        musers: { type: Number },
+        mcharge: { type: Number },
+        mco2reduction: { type: Number }
+    },
+    haengwon: {
+        musers: { type: Number },
+        mcharge: { type: Number },
+        mco2reduction: { type: Number }
+    },
+    shelter: {
+        musers: { type: Number },
+        mcharge: { type: Number },
+        mco2reduction: { type: Number }
+    },
+    publicfacilities: {
+        musers: { type: Number },
+        mcharge: { type: Number },
+        mco2reduction: { type: Number }
+    },
+    drt: {
+        musers: { type: Number },
+        mcharge: { type: Number },
+        mco2reduction: { type: Number }
+    },
 });
 //Exporting Map Insights Model
 const mapinsights = mongoose.model("mapinsights", mapinsightsSchema);
